--- a/UD_WebAPI_Course/Web.config
+++ b/UD_WebAPI_Course/Web.config
@@ -8,6 +8,9 @@
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
+  <connectionStrings>
+    <add name="QuotesDbContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=QuotesDb;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\QuotesDb.mdf" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
